@@ -120,6 +120,8 @@ Revision:
 * #331: imProfile: make imProfile work for guests | ticket from addons (Phoenyx)
 * #332: imProfile: removing duplicate and unnecessary js and css includes | ticket from addons (Phoenyx)
 * #749: IPF: corrected wrong constructor name in IcmsFormUploadElement and caption (Phoenyx)
+* #750: redirecting to index.php if social_mode of imProfile is on / to userinfo.php if social_mode is off (Phoenyx)
+* #302: imProfile: redirecting from userinfo.php to index.php if social_mode is on | ticket from addons (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
